page navigation code refactor

--- a/pug/pages/_flexbox.pug
+++ b/pug/pages/_flexbox.pug
@@ -1,4 +1,4 @@
-main.main-content
+main.main-content.css-tutorial
     .container
         .flex-layout
             h1.main-title <code>flexbox</code>
