--- a/pug/pages/_index.pug
+++ b/pug/pages/_index.pug
@@ -1,4 +1,4 @@
-main.main-content
+main.main-content.home
     .container
         h1.title.home-title
             | Welcome to our HTML/CSS tutorial
