--- a/pug/pages/_position.pug
+++ b/pug/pages/_position.pug
@@ -1,4 +1,4 @@
-main.main-content
+main.main-content.css-tutorial
     .container
         .position
             h1.title Властивість <code>position</code>
