--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@
 @import 'modules/flexbox-module';
 @import 'modules/samples';
 @import "modules/measure-page";
+@import 'modules/topic-sidenav';
 
 // State
 //@import "state/state";
