--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -65,3 +65,5 @@ $vars : (
 // project variables ----------------------------
 
 $title-size: 45px;
+$base-border-radius: 8px;
+$circle-radius: 50%;
