--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,24 @@ h6 {
   font-weight: 700; }
 
 .main-content {
-  width: 100%; }
+  position: relative;
+  width: 100%;
+  height: 100%; }
+  .main-content.home .container {
+    width: 90%;
+    margin: auto; }
+  .main-content.home::before {
+    content: "";
+    display: block;
+    position: fixed;
+    top: -10px;
+    width: 100%;
+    height: 110%;
+    opacity: .05;
+    z-index: -10;
+    background-image: url("../img/html-css_background.jpg");
+    background-size: cover;
+    background-position: 50% 50%; }
 
 .container {
   width: 1000px;
@@ -275,10 +292,10 @@ h6 {
 .main-title {
   text-align: center; }
 
-.orange-text {
+.orange {
   color: #de7300; }
 
-.blue-text {
+.blue {
   color: blue; }
 
 table {
@@ -919,11 +936,13 @@ td:first-child {
   background-color: #f6f7f9;
   box-shadow: 3px 8px 29px -6px rgba(0, 0, 0, 0.5);
   transition: width 250ms ease-in-out;
-  z-index: 10000; }
+  z-index: 1000; }
   .nav-menu:hover {
     width: 20%; }
     .nav-menu:hover .nav-block {
       overflow-y: auto; }
+    .nav-menu:hover .nav-link {
+      visibility: visible; }
 
 .home-link {
   position: relative;
@@ -950,37 +969,34 @@ td:first-child {
   max-height: 90%;
   padding: 0 0 0 3rem;
   display: block;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  overflow: hidden;
   list-style: none;
   counter-reset: item-number; }
   .nav-list li {
-    position: relative; }
-    .nav-list li:nth-child(-n+9)::before {
-      left: -36px; }
+    position: relative;
+    height: 2.2rem; }
     .nav-list li::before {
       counter-increment: item-number;
       content: counter(item-number);
       position: absolute;
       top: 6px;
       left: -40px;
-      padding: 3px 5px;
+      width: 25px;
+      height: 22px;
       border-radius: 3px;
       background-color: #009BD9;
       font-size: 12px;
+      text-align: center;
+      line-height: 22px;
       color: #fff;
       transition: all 180ms ease; }
   .nav-list .nav-link {
     position: relative;
     display: block;
     height: 100%;
-    line-height: 1.5rem;
-    padding: .4rem;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    font-size: 14px;
-    font-weight: 600;
-    font-variant: small-caps;
+    line-height: 1rem;
+    font-size: 13px;
+    font-weight: 400;
     transition: all 180ms ease; }
     .nav-list .nav-link:hover {
       color: #000; }
@@ -1855,50 +1871,20 @@ span:target {
         transform: rotateY(90deg) translateZ(100px); }
 
 .home-card {
-  width: 25rem;
+  width: 30rem;
   height: 21rem;
   padding: 2rem;
   box-shadow: 3px 8px 29px -6px rgba(0, 0, 0, 0.5);
+  background-color: #fff;
   border-radius: 2px; }
-  .home-card .theme-list {
-    list-style: none;
-    padding: 0;
-    max-height: 80%;
-    display: block;
-    overflow: auto;
-    overflow-x: hidden; }
-  .home-card .theme-item {
-    position: relative;
-    line-height: 2rem;
-    margin-bottom: 5px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1); }
-    .home-card .theme-item a {
-      display: block;
-      width: 100%;
-      height: auto;
-      text-align: left; }
-    .home-card .theme-item::before {
-      content: '';
-      display: block;
-      position: absolute;
-      bottom: -2px;
-      transform: translateX(100%);
-      transition: transform 250ms ease-in-out;
-      width: 150%;
-      height: 2px;
-      background: #FF6421; }
-    .home-card .theme-item:hover {
-      color: #000; }
-      .home-card .theme-item:hover::before {
-        transform: translateX(0); }
   .home-card_wrapper {
     display: flex;
-    justify-content: space-around;
-    padding: 6rem 2rem; }
+    justify-content: space-between;
+    padding: 3rem 0; }
 
 .home-image {
   width: 30%;
-  margin: auto 0; }
+  margin: auto 1rem; }
 
 .card-title {
   position: relative;
@@ -1915,6 +1901,39 @@ span:target {
     height: 110%;
     background-color: #009BD9;
     border-radius: 20%; }
+
+.theme-list {
+  list-style: none;
+  padding: 0;
+  max-height: 80%;
+  display: block;
+  overflow: auto;
+  overflow-x: hidden; }
+
+.theme-item {
+  position: relative;
+  line-height: 2rem;
+  margin-bottom: 5px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.1); }
+  .theme-item a {
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: left; }
+  .theme-item::before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -2px;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+    width: 161%;
+    height: 2px;
+    background: #FF6421; }
+  .theme-item:hover {
+    color: #000; }
+    .theme-item:hover::before {
+      transform: translateX(0); }
 
 .title, .subtitle {
   color: #4d4d52;
@@ -2039,3 +2058,31 @@ figure.code {
 .measure-wrap {
   max-width: 1000px;
   margin: auto; }
+
+.aside-bar {
+  position: fixed;
+  top: 20%;
+  right: -172px;
+  width: 170px;
+  height: 400px;
+  box-shadow: 3px 8px 29px -6px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  background-color: #f6f7f9;
+  transition: right 200ms linear;
+  cursor: pointer;
+  font-size: 13px; }
+  .aside-bar:hover {
+    right: -10px; }
+    .aside-bar:hover .slide-btn {
+      opacity: 0; }
+
+.slide-btn {
+  position: absolute;
+  top: 0;
+  left: -25px;
+  background-color: #666;
+  height: 100%;
+  width: 25px;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+  transition: opacity 100ms ease-in-out; }
