--- a/pug/pages/_animations.pug
+++ b/pug/pages/_animations.pug
@@ -1,4 +1,7 @@
-main.main-content
+main.main-content.css-tutorial
+
+    include ../modules/_aside-bar
+
     .container
         .animations
             .animation-sample
@@ -72,7 +75,7 @@ main.main-content
                 | }
 
 
-            h2 <code>animation-duration</code>
+            h2#animation-duration <code>animation-duration</code>
             p Властивість визначає, як довго анімація буде відтворюватись. Задається в секундах, або мілісекундах. Якщо для елементу задано більше однієї анімації, можна встановити для них різний час перерахувавши значення через кому.
 
             table.table.striped
@@ -99,7 +102,7 @@ main.main-content
                 | }
 
 
-            h2 <code>animation-timing-function</code>
+            h2#animation-timing <code>animation-timing-function</code>
             p  Властивість визначає прискорення/сповільнення анімації, за допомогою часових функцій. Задається за допомогою ключових слів або кривої Базье <code>cubic-bezier(x1, y1, x2, y2)</code>.
 
             table.table.striped
@@ -171,7 +174,7 @@ main.main-content
                 .anim-container.steps <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
 
 
-            h2 <code>animation-delay</code>
+            h2#animation-delay <code>animation-delay</code>
             p Властивість ігнорує заданий час, що надає можливість окремо запустити кожну анімацію. Від'ємна затримка, починає анімацію з певного моменту всередині її циклу, тобто з часу, який вказаний у затримці. Це дозволяє застосовувати анімацію до кількох елементів з сувом фази, змінюючи тільки час затримки.
             p Щоб анімація почалась з середини, потрібно задати від'єнму затримку, рівну половині часу, який встановлений у <code>animation-duration</code>
 
@@ -201,7 +204,7 @@ main.main-content
                 span.four
 
 
-            h2 <code>animation-iteration-count</code>
+            h2#animation-count <code>animation-iteration-count</code>
             p Властивість, яка дозволяє запустити анімацію кілька разів. Значення 0 або від'ємне число, відміняюь анімацію.
                 figure.code <span class="nc">.selector</span>
                     | &emsp;{
@@ -231,7 +234,7 @@ main.main-content
                     td Наслідує значення властивості від батьківського елементу
 
 
-            h2 <code>animation-direction</code>
+            h2#animation-direction <code>animation-direction</code>
             p Властивість задає напрямок повтору анімації. Якщо анімація повторюється тільки один раз, то властивість втрачає сенс.
                 figure.code <span class="nc">.selector</span>
                     | &emsp;{
@@ -351,7 +354,7 @@ main.main-content
 
 
 
-            h2.anim-subtitle <div class="front-card">CSS 3d transformations<div class="back-card">CSS 3d transformations</div></div>
+            h2#3danimations.anim-subtitle <div class="front-card">CSS 3d transformations<div class="back-card">CSS 3d transformations</div></div>
             p 3d трансформації працюють аналогічно з 2d трансформаціями, різниця в тому, що ою'єкти мають змогу пересуватись по осі Z. Щоб почати створювати 3d трансформацію, потрібно встановити властивість <code>perspective</code> для батьківського контейнеру.
                 figure.code <span class="nc">.parent</span>
                     | &emsp;{
