--- a/scss/general/_general.scss
+++ b/scss/general/_general.scss
@@ -2,7 +2,40 @@
 @import '../utilities/_color';
 
 .main-content {
+  position: relative;
   width: 100%;
+  height: 100%;
+
+  &.home {
+
+    .container {
+      width: 90%;
+      margin: auto;
+    }
+
+    &::before {
+      content: "";
+      display: block;
+      position: fixed;
+      top: -10px;
+      width: 100%;
+      height: 110%;
+      opacity: .05;
+      z-index: -10;
+      background: {
+        image: url('../img/html-css_background.jpg');
+        size: cover;
+        position: 50% 50%;
+      };
+
+    }
+
+  }
+
+  .css-tutorial {
+
+  }
+
 }
 
 .container {
@@ -15,10 +48,10 @@
   text-align: center;
 }
 
-.orange-text {
+.orange {
   color: #de7300;
 }
 
-.blue-text {
+.blue {
   color: blue;
 }
