--- a/scss/modules/_home-card.scss
+++ b/scss/modules/_home-card.scss
@@ -1,66 +1,23 @@
 .home-card {
-  width: 25rem;
+  width: 30rem;
   height: 21rem;
   padding: 2rem;
   box-shadow: $box-shadow-black;
+  background-color: $white;
   border-radius: 2px;
-
-  .theme-list {
-    list-style: none;
-    padding: 0;
-    max-height: 80%;
-    display: block;
-    overflow: auto;
-    overflow-x: hidden;
-
-  }
-
-  .theme-item {
-    position: relative;
-    line-height: 2rem;
-    margin-bottom: 5px;
-    border-bottom: 2px solid transparentize($black, .9);
-
-    a {
-      display: block;
-      width: 100%;
-      height: auto;
-      text-align: left;
-    }
-
-    &::before {
-      content: '';
-      display: block;
-      position: absolute;
-      bottom: -2px;
-      transform: translateX(100%);
-      transition: transform 250ms ease-in-out;
-      width: 150%;
-      height: 2px;
-      background: $orange-1;
-    }
-
-    &:hover {
-      color: $black;
-      &::before {
-        transform: translateX(0);
-
-      }
-    }
-  }
 
   &_wrapper {
     display: flex;
-    justify-content: space-around;
-    padding: 6rem 2rem;
-  }
+    justify-content: space-between;
+    padding: 3rem 0;
 
+  }
 
 }
 
 .home-image {
   width: 30%;
-  margin: auto 0;
+  margin: auto 1rem;
 }
 
 .card-title {
@@ -80,5 +37,51 @@
     background-color: $blue-1;
     border-radius: 20%;
 
+  }
+}
+
+// global class for link -----------------------------
+
+.theme-list {
+  list-style: none;
+  padding: 0;
+  max-height: 80%;
+  display: block;
+  overflow: auto;
+  overflow-x: hidden;
+
+}
+
+.theme-item {
+  position: relative;
+  line-height: 2rem;
+  margin-bottom: 5px;
+  border-bottom: 2px solid transparentize($black, .9);
+
+  a {
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: left;
+  }
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -2px;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+    width: 161%;
+    height: 2px;
+    background: $orange-1;
+  }
+
+  &:hover {
+    color: $black;
+    &::before {
+      transform: translateX(0);
+
+    }
   }
 }
