--- a/pug/pages/_animations.pug
+++ b/pug/pages/_animations.pug
@@ -1,7 +1,5 @@
 main.main-content.css-tutorial
 
-    include ../modules/_aside-bar
-
     .container
         .animations
             .animation-sample
@@ -552,6 +550,25 @@ main.main-content.css-tutorial
 
 
 
+    section.aside-bar
+        ul.theme-list
+            li.theme-item
+                a(href='#animation-name') animation-name
+            li.theme-item
+                a(href='#animation-duration') animation-duration
+            li.theme-item
+                a(href='#animation-timing') animation-timing
+            li.theme-item
+                a(href='#animation-delay') animation-delay
+            li.theme-item
+                a(href='#animation-count') animation-count
+            li.theme-item
+                a(href='#animation-direction') animation-direction
+            li.theme-item
+                a(href='#3danimations') 3d-animation
+
+        .slide-btn
+            span.fa.fa-arrow-left
 
 
 
