--- a/pug/pages/_index.pug
+++ b/pug/pages/_index.pug
@@ -6,27 +6,48 @@ main.main-content.home
         .home-card_wrapper
             .home-card
                 h2.card-title
-                    a(href="html/index.html")
+                    a(href="./html/html/index.html")
                         | HTML
-                ul.theme-list(rel='slickScroll')
+                ul.theme-list
                     li.theme-item
-                        a(href="#")
-                            |
+                        a(href="./hyperlinks.html")
+                            | Ссилка
                     li.theme-item
-                        a(href="#")
-                            |
+                        a(href="./html/html/attr.html")
+                            | Атрибути
                     li.theme-item
-                        a(href="#")
-                            |
+                        a(href="./html/html/h.html")
+                            | Заголовки
                     li.theme-item
-                        a(href="#")
-                            |
+                        a(href="./html/html/img-audio-video.html")
+                            | Аудіо/Відео
                     li.theme-item
-                        a(href="#")
-                            |
+                        a(href="./html/html/index.html")
+                            | Структура
                     li.theme-item
-                        a(href="#")
-                            |
+                        a(href="./html/html/input-textarea-btn.html")
+                            | Інпути/Кнопки
+                    li.theme-item
+                        a(href="./html/html/link-script.html")
+                            | Зовнішнє підключення/Тег <code>&lt;script&gt;</code>
+                    li.theme-item
+                        a(href="./html/html/lists.html")
+                            | Списки
+                    li.theme-item
+                        a(href="./html/html/meta.html")
+                            | <code>&lt;meta&gt;</code>
+                    li.theme-item
+                        a(href="./html/html/semantics.html")
+                            | Семантика
+                    li.theme-item
+                        a(href="./html/html/symbols.html")
+                            | Сімволи Unicode
+                    li.theme-item
+                        a(href="./html/html/table-form.html")
+                            | Форми/Таблиці
+                    li.theme-item
+                        a(href="./html/html/tags.html")
+                            | Теги
 
             img(src='./img/fon1.png').home-image
 
@@ -34,7 +55,7 @@ main.main-content.home
                 h2.card-title
                     a(href="./css_boxmodel.html")
                         | CSS
-                ul.theme-list(rel='slickScroll')
+                ul.theme-list
                     li.theme-item
                         a(href="./css_boxmodel.html")
                             | CSS Box Model
