--- a/pug/pages/_transform.pug
+++ b/pug/pages/_transform.pug
@@ -1,4 +1,5 @@
 main.main-content.css-tutorial
+
     .container
         .transform
 
@@ -103,7 +104,7 @@ main.main-content.css-tutorial
 
 
 
-            h2.subtitle Точка трансформації <code>transform-origin</code>
+            h2.subtitle#transform-origin Точка трансформації <code>transform-origin</code>
             p Властивість дозволяє змістити центр початку. Дефолтне значення: <code>transform-origin: center center</code> або 50% 50%.
 
 
@@ -137,7 +138,7 @@ main.main-content.css-tutorial
 
 
 
-            h2.anim-subtitle СSS переходи <code>transition</code>
+            h2.anim-subtitle#transition СSS переходи <code>transition</code>
             p СSS переходи дозволяють анімувати значення основні на інші, за заданий проміжок часу.
             p Зміна властивостей відбувється при якому-небудь івенті. Найчастіше спрацьовує псевдоклас :hover.
             p Переходи застосовуються до всых елементыв, включно з псевдоелементами :before :after.
@@ -159,7 +160,16 @@ main.main-content.css-tutorial
 
 
 
+    section.aside-bar
+        ul.theme-list
+            li.theme-item
+                a(href='#transform-origin') transform-origin
+            li.theme-item
+                a(href='#transition') transition
 
+
+        .slide-btn
+            span.fa.fa-arrow-left
 
 
 
