--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -16,3 +16,17 @@
     }
   }
 }
+
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('#{$fonts-path}fonts/font-awesome/fontawesome-webfont.eot?v=4.7.0');
+  src: url('#{$fonts-path}fonts/font-awesome/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'),
+  url('#{$fonts-path}fonts/font-awesome/fontawesome-webfont.woff2?v=4.7.0') format('woff2'),
+  url('#{$fonts-path}fonts/font-awesome/fontawesome-webfont.woff?v=4.7.0') format('woff'),
+  url('#{$fonts-path}fonts/font-awesome/fontawesome-webfont.ttf?v=4.7.0') format('truetype'),
+  url('#{$fonts-path}fonts/font-awesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  //  src: url('#{$fa-font-path}fonts/font-awesome/FontAwesome.otf') format('opentype'); // used when developing fonts
+  font-weight: normal;
+  font-style: normal;
+}
