--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,8 +29,11 @@
 @import 'modules/code-example';
 @import 'modules/flexbox-module';
 @import 'modules/samples';
-@import "modules/measure-page";
+@import 'modules/measure-page';
 @import 'modules/topic-sidenav';
+@import 'modules/animations';
+@import 'modules/block-styling';
+@import 'modules/positioning';
 
 // State
 //@import "state/state";
