--- a/scss/utilities/_fonts_var.scss
+++ b/scss/utilities/_fonts_var.scss
@@ -1,5 +1,5 @@
 // General variables
-$fonts-path  : '../fonts/';
+$fonts-path  : '../../fonts/';
 $default-font: 'Helvetica', Arial, sans-serif;
 
 // Fonts variables
