--- a/css/main.css
+++ b/css/main.css
@@ -3,31 +3,38 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 300;
-  src: local("Open Sans Light"), local("OpenSans-Light"), url("../fonts/open-sans/open-sans-300.woff2") format("woff2"), url("../fonts/open-sans/open-sans-300.woff") format("woff"); }
+  src: local("Open Sans Light"), local("OpenSans-Light"), url("../../fonts/open-sans/open-sans-300.woff2") format("woff2"), url("../../fonts/open-sans/open-sans-300.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  src: local("Open Sans"), local("OpenSans"), url("../fonts/open-sans/open-sans-regular.woff2") format("woff2"), url("../fonts/open-sans/open-sans-regular.woff") format("woff"); }
+  src: local("Open Sans"), local("OpenSans"), url("../../fonts/open-sans/open-sans-regular.woff2") format("woff2"), url("../../fonts/open-sans/open-sans-regular.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
-  src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url("../fonts/open-sans/open-sans-600.woff2") format("woff2"), url("../fonts/open-sans/open-sans-600.woff") format("woff"); }
+  src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url("../../fonts/open-sans/open-sans-600.woff2") format("woff2"), url("../../fonts/open-sans/open-sans-600.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../fonts/open-sans/open-sans-700.woff2") format("woff2"), url("../fonts/open-sans/open-sans-700.woff") format("woff"); }
+  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../../fonts/open-sans/open-sans-700.woff2") format("woff2"), url("../../fonts/open-sans/open-sans-700.woff") format("woff"); }
 
 @font-face {
   font-family: "Oswald";
   font-style: normal;
   font-weight: 700;
-  src: local("Oswald Bold"), local("Oswald-Bold"), url("../fonts/oswald/oswald-700.woff2") format("woff2"), url("../fonts/oswald/oswald-700.woff") format("woff"); }
+  src: local("Oswald Bold"), local("Oswald-Bold"), url("../../fonts/oswald/oswald-700.woff2") format("woff2"), url("../../fonts/oswald/oswald-700.woff") format("woff"); }
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url("../../fonts/fonts/font-awesome/fontawesome-webfont.eot?v=4.7.0");
+  src: url("../../fonts/fonts/font-awesome/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../../fonts/fonts/font-awesome/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../../fonts/fonts/font-awesome/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../../fonts/fonts/font-awesome/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../../fonts/fonts/font-awesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 
 article,
 aside,
@@ -283,6 +290,20 @@ h6 {
     background-image: url("../img/html-css_background.jpg");
     background-size: cover;
     background-position: 50% 50%; }
+
+.css-tutorial::before {
+  content: "";
+  display: block;
+  position: fixed;
+  top: -10px;
+  width: 100%;
+  height: 110%;
+  opacity: .05;
+  z-index: -10;
+  background-image: url("../img/css-bg_large.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 0; }
 
 .container {
   width: 1000px;
@@ -1012,11 +1033,6 @@ td:first-child {
         border-radius: 20%;
         transition: all 180ms ease; }
 
-.selectors {
-  max-width: 1000px;
-  margin: auto;
-  margin-bottom: 100px; }
-
 .selector-example {
   margin-bottom: 40px;
   display: flex;
@@ -1114,345 +1130,11 @@ span:target {
     top: 0;
     right: 0; }
 
-.measure-wrap {
-  max-width: 1200px;
-  margin: auto; }
-
 .font-size-24 {
   font-size: 24px; }
 
 .font-size-1-5em {
   font-size: 1.5em; }
-
-.position {
-  max-width: 1000px;
-  margin: auto;
-  margin-bottom: 100px; }
-  .position .visual {
-    border: solid #6AC5AC 3px;
-    position: relative;
-    padding: 16px; }
-    .position .visual.before-align::before {
-      content: '';
-      display: inline-block;
-      height: 100%;
-      vertical-align: middle; }
-    .position .visual code {
-      background-color: #d7d7d7; }
-    .position .visual .label {
-      position: absolute;
-      background-color: #6AC5AC;
-      color: #414142;
-      line-height: 1em;
-      top: 0;
-      left: 0;
-      padding: 0 3px 3px 0; }
-    .position .visual .label:last-of-type {
-      top: auto;
-      left: auto;
-      right: 0;
-      bottom: 0; }
-  .position .visual2 {
-    border: solid #D64078 3px;
-    position: relative;
-    padding: 16px; }
-    .position .visual2.absolute {
-      position: absolute;
-      top: 0;
-      right: 100px;
-      background-color: #faebd7; }
-    .position .visual2 code {
-      background-color: #d7d7d7; }
-    .position .visual2 .label {
-      position: absolute;
-      background-color: #D64078;
-      color: #414142;
-      line-height: 1em;
-      top: 0;
-      left: 0;
-      padding: 0 3px 3px 0; }
-    .position .visual2 .label:last-of-type {
-      top: auto;
-      left: auto;
-      right: 0;
-      bottom: 0; }
-  .position .fixed {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    background-color: #a5ffa9; }
-  .position p code {
-    background-color: #d7d7d7; }
-  .position .inner {
-    border: 2px solid red;
-    padding: 3px 10px; }
-  .position .vimg {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    background-color: #D64078; }
-  .position .vertical-text {
-    border: 2px solid #6ac5ac;
-    padding: 20px; }
-
-.indexz {
-  margin-bottom: 100px; }
-  .indexz .z-container {
-    font-size: 0; }
-  .indexz .z-wrap {
-    position: relative;
-    display: inline-block;
-    width: 50%;
-    height: 300px;
-    border: 2px solid black;
-    font-size: initial;
-    background-color: rgba(0, 187, 124, 0.47); }
-    .indexz .z-wrap:last-child {
-      background-color: rgba(0, 86, 166, 0.4); }
-      .indexz .z-wrap:last-child .z1 {
-        z-index: 1; }
-  .indexz .z {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    color: #fff;
-    text-align: center;
-    font-size: initial; }
-  .indexz .z1 {
-    background-color: red;
-    top: 20px;
-    left: 20px; }
-  .indexz .z2 {
-    background-color: blue;
-    top: 60px;
-    left: 60px; }
-  .indexz .z3 {
-    background-color: green;
-    top: 100px;
-    left: 100px; }
-  .indexz .z4 {
-    background-color: orange;
-    bottom: 0;
-    left: -25px; }
-
-.float-block {
-  border: 1px solid red;
-  padding: 20px;
-  margin-bottom: 60px; }
-  .float-block h3 {
-    margin-top: 0; }
-  .float-block p {
-    background-color: #a8e6aa; }
-    .float-block p:last-child {
-      margin-bottom: 0; }
-
-.f-left {
-  float: left;
-  border: 1px solid blue;
-  margin-right: 20px; }
-
-.f-right {
-  float: right;
-  border: 1px solid blue;
-  margin: 10px; }
-
-.clearfix:after {
-  content: "";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0; }
-
-.float-blocks {
-  background-color: #2c87ce;
-  overflow: hidden;
-  width: 350px;
-  margin: auto; }
-  .float-blocks .blocks {
-    width: 100px;
-    height: 100px;
-    float: left;
-    background-color: #4caf50;
-    border: 1px solid red;
-    margin: 5px; }
-    .float-blocks .blocks.large {
-      height: 120px; }
-
-.fonts {
-  max-width: 1200px;
-  margin: auto; }
-  .fonts .blue {
-    color: rgba(20, 130, 255, 0.9); }
-  .fonts .green {
-    color: #3c9632; }
-  .fonts .blue, .fonts .green {
-    cursor: pointer;
-    white-space: nowrap;
-    font-weight: 600; }
-  .fonts .title, .fonts .subtitle {
-    text-align: center; }
-  .fonts table {
-    margin: 3rem auto;
-    border: 1px solid rgba(220, 220, 220, 0.6);
-    border-collapse: collapse; }
-  .fonts table td {
-    padding: .6rem;
-    border-left: 1px solid rgba(220, 220, 220, 0.6);
-    border-bottom: 1px solid rgba(220, 220, 220, 0.6); }
-  .fonts .table-heading {
-    background-color: rgba(100, 100, 100, 0.3);
-    text-align: center; }
-  .fonts .table-heading th {
-    padding: .6rem 0;
-    border-left: 1px solid rgba(220, 220, 220, 0.6); }
-  .fonts li .blue {
-    font-size: 22px; }
-  .fonts .text-decor li {
-    padding: .4rem 0; }
-  .fonts ul {
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-
-.block-style {
-  max-width: 1100px;
-  margin: 0 auto 100px; }
-
-.back-exemp {
-  width: 200px;
-  height: 200px;
-  background-color: #00a19b;
-  margin: auto;
-  transition: all .25s ease-out; }
-  .back-exemp.border {
-    border: 50px solid transparent;
-    padding: 50px;
-    border-image: url("../img/s1.png"); }
-
-#over {
-  padding: 15px;
-  font-size: 17px; }
-  #over::before {
-    content: '!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!';
-    display: block; }
-
-#brepet {
-  background-image: url("../img/s1.png");
-  width: 250px; }
-
-#bsize {
-  background-image: url("../img/s1.png");
-  background-repeat: no-repeat;
-  width: 250px; }
-
-#battach {
-  background: #00a19b url("../img/b.png") no-repeat;
-  color: red;
-  overflow: auto;
-  background-size: cover; }
-  #battach::before {
-    content: 'asdasdasdasadasdsdasdasdsadasdasdasdasdasdasdsadasdasdsadsa';
-    display: block; }
-
-#bclip {
-  padding: 20px;
-  background: url("../img/b2.png") no-repeat;
-  font-size: 13px;
-  border: 10px solid rgba(0, 0, 0, 0.5); }
-
-#borig {
-  padding: 20px;
-  background: url("../img/b2.png") no-repeat;
-  font-size: 13px;
-  border: 10px solid rgba(0, 0, 0, 0.5); }
-
-#opa {
-  background: url("../img/b2.png") no-repeat;
-  padding: 50px 0; }
-
-.bgradient {
-  height: 70px;
-  color: #fff;
-  margin-bottom: 10px; }
-  .bgradient.radial {
-    height: 150px; }
-
-.radio-repeat {
-  color: orange;
-  cursor: pointer; }
-  .radio-repeat input {
-    margin-right: 10px;
-    outline: none;
-    vertical-align: middle; }
-
-.border-s {
-  display: inline-block;
-  background-color: red;
-  border-width: 5px;
-  border-color: black;
-  padding: 5px;
-  color: #fff;
-  font-weight: 600;
-  margin: 10px; }
-
-.flex-image {
-  display: block;
-  width: 100%;
-  height: auto; }
-
-.media {
-  max-width: 1000px;
-  margin: auto;
-  margin-bottom: 100px; }
-
-.animations {
-  max-width: 1000px;
-  margin: auto;
-  margin-bottom: 100px; }
-
-.anim-subtitle {
-  perspective: 300px;
-  width: 300px;
-  margin: 2rem auto;
-  font-size: 28px;
-  text-align: center;
-  font-weight: 700; }
-  .anim-subtitle span {
-    display: block;
-    animation: d-title 4s ease-in-out infinite;
-    overflow: hidden; }
-
-@keyframes d-title {
-  0% {
-    transform: rotateY(0); }
-  100% {
-    transform: rotateY(360deg); } }
-
-.perspective-container-1, .perspective-container-2 {
-  perspective: 900px;
-  width: 80%;
-  margin: auto;
-  padding: 1rem 2rem;
-  display: flex;
-  justify-content: space-around;
-  border: 2px solid rgba(100, 100, 100, 0.5); }
-  .perspective-container-1 .perspective-example, .perspective-container-2 .perspective-example {
-    width: 220px;
-    height: 120px;
-    background-color: #006699;
-    transform: rotateX(-120deg); }
-
-.perspective-container-2 {
-  perspective-origin: 10% 10%; }
-  .perspective-container-2 .perspective-example {
-    width: 220px;
-    height: 120px;
-    background-color: #00E4F6;
-    transform: rotateX(50deg); }
-
-.transform {
-  width: 1000px;
-  margin: auto; }
 
 .animation-sample {
   display: flex;
@@ -1912,14 +1594,10 @@ span:target {
 
 .theme-item {
   position: relative;
-  line-height: 2rem;
+  width: 100%;
   margin-bottom: 5px;
+  line-height: 2rem;
   border-bottom: 2px solid rgba(0, 0, 0, 0.1); }
-  .theme-item a {
-    display: block;
-    width: 100%;
-    height: auto;
-    text-align: left; }
   .theme-item::before {
     content: '';
     display: block;
@@ -1927,13 +1605,18 @@ span:target {
     bottom: -2px;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
-    width: 161%;
+    width: 100%;
     height: 2px;
     background: #FF6421; }
   .theme-item:hover {
     color: #000; }
     .theme-item:hover::before {
       transform: translateX(0); }
+  .theme-item a {
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: left; }
 
 .title, .subtitle {
   color: #4d4d52;
@@ -2065,6 +1748,7 @@ figure.code {
   right: -172px;
   width: 170px;
   height: 400px;
+  padding: 1rem;
   box-shadow: 3px 8px 29px -6px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
   background-color: #f6f7f9;
@@ -2078,11 +1762,299 @@ figure.code {
 
 .slide-btn {
   position: absolute;
-  top: 0;
+  top: 50%;
   left: -25px;
   background-color: #666;
-  height: 100%;
+  height: 8.5rem;
   width: 25px;
   border-bottom-left-radius: 8px;
   border-top-left-radius: 8px;
+  transform: translateY(-50%);
   transition: opacity 100ms ease-in-out; }
+
+.animations {
+  max-width: 1000px;
+  margin: auto;
+  margin-bottom: 100px; }
+
+.anim-subtitle {
+  perspective: 300px;
+  width: 300px;
+  margin: 2rem auto;
+  font-size: 28px;
+  text-align: center;
+  font-weight: 700; }
+  .anim-subtitle span {
+    display: block;
+    animation: d-title 4s ease-in-out infinite;
+    overflow: hidden; }
+
+@keyframes d-title {
+  0% {
+    transform: rotateY(0); }
+  100% {
+    transform: rotateY(360deg); } }
+
+.perspective-container-1, .perspective-container-2 {
+  perspective: 900px;
+  width: 80%;
+  margin: auto;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-around;
+  border: 2px solid rgba(100, 100, 100, 0.5); }
+  .perspective-container-1 .perspective-example, .perspective-container-2 .perspective-example {
+    width: 220px;
+    height: 120px;
+    background-color: #006699;
+    transform: rotateX(-120deg); }
+
+.perspective-container-2 {
+  perspective-origin: 10% 10%; }
+  .perspective-container-2 .perspective-example {
+    width: 220px;
+    height: 120px;
+    background-color: #00E4F6;
+    transform: rotateX(50deg); }
+
+.block-style {
+  max-width: 1100px;
+  margin: 0 auto 100px; }
+
+.back-exemp {
+  width: 200px;
+  height: 200px;
+  background-color: #00a19b;
+  margin: auto;
+  transition: all .25s ease-out; }
+  .back-exemp.border {
+    border: 50px solid transparent;
+    padding: 50px;
+    border-image: url("../img/s1.png"); }
+
+#over {
+  padding: 15px;
+  font-size: 17px; }
+  #over::before {
+    content: '!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!';
+    display: block; }
+
+#brepet {
+  background-image: url("../img/s1.png");
+  width: 250px; }
+
+#bsize {
+  background-image: url("../img/s1.png");
+  background-repeat: no-repeat;
+  width: 250px; }
+
+#battach {
+  background: #00a19b url("../img/b.png") no-repeat;
+  color: red;
+  overflow: auto;
+  background-size: cover; }
+  #battach::before {
+    content: 'asdasdasdasadasdsdasdasdsadasdasdasdasdasdasdsadasdasdsadsa';
+    display: block; }
+
+#bclip {
+  padding: 20px;
+  background: url("../img/b2.png") no-repeat;
+  font-size: 13px;
+  border: 10px solid rgba(0, 0, 0, 0.5); }
+
+#borig {
+  padding: 20px;
+  background: url("../img/b2.png") no-repeat;
+  font-size: 13px;
+  border: 10px solid rgba(0, 0, 0, 0.5); }
+
+#opa {
+  background: url("../img/b2.png") no-repeat;
+  padding: 50px 0; }
+
+.bgradient {
+  height: 70px;
+  color: #fff;
+  margin-bottom: 10px; }
+  .bgradient.radial {
+    height: 150px; }
+
+.radio-repeat {
+  color: orange;
+  cursor: pointer; }
+  .radio-repeat input {
+    margin-right: 10px;
+    outline: none;
+    vertical-align: middle; }
+
+.border-s {
+  display: inline-block;
+  background-color: red;
+  border-width: 5px;
+  border-color: black;
+  padding: 5px;
+  color: #fff;
+  font-weight: 600;
+  margin: 10px; }
+
+.flex-image {
+  display: block;
+  width: 100%;
+  height: auto; }
+
+.position .visual {
+  border: solid #6AC5AC 3px;
+  position: relative;
+  padding: 16px; }
+  .position .visual.before-align::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+  .position .visual code {
+    background-color: #d7d7d7; }
+  .position .visual .label {
+    position: absolute;
+    background-color: #6AC5AC;
+    color: #414142;
+    line-height: 1em;
+    top: 0;
+    left: 0;
+    padding: 0 3px 3px 0; }
+  .position .visual .label:last-of-type {
+    top: auto;
+    left: auto;
+    right: 0;
+    bottom: 0; }
+
+.position .visual2 {
+  border: solid #D64078 3px;
+  position: relative;
+  padding: 16px; }
+  .position .visual2.absolute {
+    position: absolute;
+    top: 0;
+    right: 100px;
+    background-color: #faebd7; }
+  .position .visual2 code {
+    background-color: #d7d7d7; }
+  .position .visual2 .label {
+    position: absolute;
+    background-color: #D64078;
+    color: #414142;
+    line-height: 1em;
+    top: 0;
+    left: 0;
+    padding: 0 3px 3px 0; }
+  .position .visual2 .label:last-of-type {
+    top: auto;
+    left: auto;
+    right: 0;
+    bottom: 0; }
+
+.position .fixed {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background-color: #a5ffa9; }
+
+.position p code {
+  background-color: #d7d7d7; }
+
+.position .inner {
+  border: 2px solid red;
+  padding: 3px 10px; }
+
+.position .vimg {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #D64078; }
+
+.position .vertical-text {
+  border: 2px solid #6ac5ac;
+  padding: 20px; }
+
+.indexz {
+  margin-bottom: 100px; }
+  .indexz .z-container {
+    font-size: 0; }
+  .indexz .z-wrap {
+    position: relative;
+    display: inline-block;
+    width: 50%;
+    height: 300px;
+    border: 2px solid black;
+    font-size: initial;
+    background-color: rgba(0, 187, 124, 0.47); }
+    .indexz .z-wrap:last-child {
+      background-color: rgba(0, 86, 166, 0.4); }
+      .indexz .z-wrap:last-child .z1 {
+        z-index: 1; }
+  .indexz .z {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    color: #fff;
+    text-align: center;
+    font-size: initial; }
+  .indexz .z1 {
+    background-color: red;
+    top: 20px;
+    left: 20px; }
+  .indexz .z2 {
+    background-color: blue;
+    top: 60px;
+    left: 60px; }
+  .indexz .z3 {
+    background-color: green;
+    top: 100px;
+    left: 100px; }
+  .indexz .z4 {
+    background-color: orange;
+    bottom: 0;
+    left: -25px; }
+
+.float-block {
+  border: 1px solid red;
+  padding: 20px;
+  margin-bottom: 60px; }
+  .float-block h3 {
+    margin-top: 0; }
+  .float-block p {
+    background-color: #a8e6aa; }
+    .float-block p:last-child {
+      margin-bottom: 0; }
+
+.f-left {
+  float: left;
+  border: 1px solid blue;
+  margin-right: 20px; }
+
+.f-right {
+  float: right;
+  border: 1px solid blue;
+  margin: 10px; }
+
+.clearfix:after {
+  content: "";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0; }
+
+.float-blocks {
+  background-color: #2c87ce;
+  overflow: hidden;
+  width: 350px;
+  margin: auto; }
+  .float-blocks .blocks {
+    width: 100px;
+    height: 100px;
+    float: left;
+    background-color: #4caf50;
+    border: 1px solid red;
+    margin: 5px; }
+    .float-blocks .blocks.large {
+      height: 120px; }
