--- a/pug/general/_head.pug
+++ b/pug/general/_head.pug
@@ -7,6 +7,7 @@ head
   title CSS
 
   link(rel='stylesheet' href='./css/main.css')
+  link(rel='stylesheet' href='./css/font-awesome.min.css')
   link(rel='stylesheet' href='./js/libs/highlight/styles/monokai-sublime.css')
 
 
