--- a/scss/general/_general.scss
+++ b/scss/general/_general.scss
@@ -32,11 +32,29 @@
 
   }
 
-  .css-tutorial {
+}
+
+.css-tutorial {
+
+  &::before {
+    content: "";
+    display: block;
+    position: fixed;
+    top: -10px;
+    width: 100%;
+    height: 110%;
+    opacity: .05;
+    z-index: -10;
+    background: {
+      image: url('../img/css-bg_large.jpg');
+      size: cover;
+      repeat: no-repeat;
+      position: 0 0;
+    };
 
   }
-
 }
+
 
 .container {
   width: 1000px;
