--- a/scss/modules/_topic-sidenav.scss
+++ b/scss/modules/_topic-sidenav.scss
@@ -4,6 +4,7 @@
   right: -172px;
   width: 170px;
   height: 400px;
+  padding: 1rem;
   box-shadow: $box-shadow-black;
   border-radius: $base-border-radius;
   background-color: $menu-color;
@@ -23,13 +24,14 @@
 
 .slide-btn {
   position: absolute;
-  top: 0;
+  top: 50%;
   left: -25px;
   background-color: #666;
-  height: 100%;
+  height: 8.5rem;
   width: 25px;
   border-bottom-left-radius: $base-border-radius;
   border-top-left-radius: $base-border-radius;
+  transform: translateY(-50%);
   transition: opacity 100ms ease-in-out;
 
 }
