--- a/pug/pages/_media.pug
+++ b/pug/pages/_media.pug
@@ -152,3 +152,4 @@ main.main-content.css-tutorial
                 a(href='#device-options') Характеристіки прістроїв
 
         .slide-btn
+            span.fa.fa-arrow-left
