--- a/css/main.css
+++ b/css/main.css
@@ -3,36 +3,36 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 300;
-  src: local("Open Sans Light"), local("OpenSans-Light"), url("../../fonts/open-sans/open-sans-300.woff2") format("woff2"), url("../../fonts/open-sans/open-sans-300.woff") format("woff"); }
+  src: local("Open Sans Light"), local("OpenSans-Light"), url("../fonts/open-sans/open-sans-300.woff2") format("woff2"), url("../fonts/open-sans/open-sans-300.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  src: local("Open Sans"), local("OpenSans"), url("../../fonts/open-sans/open-sans-regular.woff2") format("woff2"), url("../../fonts/open-sans/open-sans-regular.woff") format("woff"); }
+  src: local("Open Sans"), local("OpenSans"), url("../fonts/open-sans/open-sans-regular.woff2") format("woff2"), url("../fonts/open-sans/open-sans-regular.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
-  src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url("../../fonts/open-sans/open-sans-600.woff2") format("woff2"), url("../../fonts/open-sans/open-sans-600.woff") format("woff"); }
+  src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url("../fonts/open-sans/open-sans-600.woff2") format("woff2"), url("../fonts/open-sans/open-sans-600.woff") format("woff"); }
 
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../../fonts/open-sans/open-sans-700.woff2") format("woff2"), url("../../fonts/open-sans/open-sans-700.woff") format("woff"); }
+  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../fonts/open-sans/open-sans-700.woff2") format("woff2"), url("../fonts/open-sans/open-sans-700.woff") format("woff"); }
 
 @font-face {
   font-family: "Oswald";
   font-style: normal;
   font-weight: 700;
-  src: local("Oswald Bold"), local("Oswald-Bold"), url("../../fonts/oswald/oswald-700.woff2") format("woff2"), url("../../fonts/oswald/oswald-700.woff") format("woff"); }
+  src: local("Oswald Bold"), local("Oswald-Bold"), url("../fonts/oswald/oswald-700.woff2") format("woff2"), url("../fonts/oswald/oswald-700.woff") format("woff"); }
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../../fonts/fonts/font-awesome/fontawesome-webfont.eot?v=4.7.0");
-  src: url("../../fonts/fonts/font-awesome/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../../fonts/fonts/font-awesome/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../../fonts/fonts/font-awesome/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../../fonts/fonts/font-awesome/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../../fonts/fonts/font-awesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  src: url("../fonts/font-awesome/fontawesome-webfont.eot");
+  src: url("../fonts/font-awesome/fontawesome-webfont.eot") format("embedded-opentype"), url("../fonts/font-awesome/fontawesome-webfont.woff2") format("woff2"), url("../fonts/font-awesome/fontawesome-webfont.woff") format("woff"), url("../fonts/font-awesome/fontawesome-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
 
@@ -1639,6 +1639,7 @@ figure.code {
   border-style: solid;
   border-radius: 10px;
   white-space: pre;
+  line-height: 1.6rem;
   margin-bottom: 40px;
   box-shadow: 3px 8px 29px -6px rgba(0, 0, 0, 0.5);
   transition: box-shadow 200ms ease-in-out;
@@ -1651,6 +1652,19 @@ figure.code {
     font-size: 1.7em; }
   figure.code:hover {
     box-shadow: 0 0 0 0; }
+
+.for-hover, .for-active {
+  display: inline-block;
+  border: 2px solid black;
+  padding: 10px;
+  cursor: pointer; }
+  .for-hover:hover, .for-active:hover {
+    border-color: green;
+    color: green; }
+
+.for-active:active {
+  border-color: red;
+  color: red; }
 
 .flex-toggler {
   display: flex;
@@ -1725,19 +1739,6 @@ figure.code {
   .flex-element.wide {
     flex-basis: 400px; }
 
-.for-hover, .for-active {
-  display: inline-block;
-  border: 2px solid black;
-  padding: 10px;
-  cursor: pointer; }
-  .for-hover:hover, .for-active:hover {
-    border-color: green;
-    color: green; }
-
-.for-active:active {
-  border-color: red;
-  color: red; }
-
 .measure-wrap {
   max-width: 1000px;
   margin: auto; }
@@ -1763,14 +1764,19 @@ figure.code {
 .slide-btn {
   position: absolute;
   top: 50%;
-  left: -25px;
-  background-color: #666;
+  left: -35px;
+  background-color: #009BD9;
   height: 8.5rem;
-  width: 25px;
+  width: 35px;
   border-bottom-left-radius: 8px;
   border-top-left-radius: 8px;
   transform: translateY(-50%);
   transition: opacity 100ms ease-in-out; }
+  .slide-btn .fa {
+    display: block;
+    color: #fff;
+    line-height: 130px;
+    text-align: center; }
 
 .animations {
   max-width: 1000px;
