--- a/scss/modules/_code-example.scss
+++ b/scss/modules/_code-example.scss
@@ -9,6 +9,7 @@ figure.code {
   border-style: solid;
   border-radius: 10px;
   white-space: pre;
+  line-height: 1.6rem;
   margin-bottom: 40px;
   box-shadow: $box-shadow-black;
   transition: box-shadow 200ms ease-in-out;
@@ -26,4 +27,26 @@ figure.code {
     box-shadow: 0 0 0 0;
   }
 
+}
+
+
+.for-hover {
+  display: inline-block;
+  border: 2px solid black;
+  padding: 10px;
+  cursor: pointer;
+
+  &:hover {
+    border-color: green;
+    color: green;
+  }
+}
+
+.for-active {
+  @extend .for-hover;
+
+  &:active {
+    border-color: red;
+    color: red;
+  }
 }
