--- a/pug/pages/_index.pug
+++ b/pug/pages/_index.pug
@@ -10,7 +10,7 @@ main.main-content.home
                         | HTML
                 ul.theme-list
                     li.theme-item
-                        a(href="./hyperlinks.html")
+                        a(href="./html/html/a.html")
                             | Ссилка
                     li.theme-item
                         a(href="./html/html/attr.html")
