--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 // General
 @import 'general/general';
 @import 'general/table';
+@import "general/titles";
 
 // Layouts
 //@import "layout/container";
@@ -25,7 +26,6 @@
 @import 'modules/selectors';
 @import "modules/easy-animation";
 @import "modules/home-card";
-@import "modules/titles";
 @import 'modules/code-example';
 @import 'modules/flexbox-module';
 @import 'modules/samples';
