--- a/pug/modules/_nav.pug
+++ b/pug/modules/_nav.pug
@@ -2,30 +2,44 @@ nav.nav-menu
     a(href='index.html').home-link home
     ol.nav-list
         li
-            a(href='selectors.html').nav-link Селектори, Псевдокласи, Каскадність, Псевдоелементи
+            a(href='selectors.html').nav-link
+                span Селектори, Псевдокласи, Каскадність, Псевдоелементи
         li
-            a(href='css_boxmodel.html').nav-link СSS Box model
+            a(href='css_boxmodel.html').nav-link
+                span СSS Box model
         li
-            a(href='measurement.html').nav-link Одиниці виміру
+            a(href='measurement.html').nav-link
+                span Одиниці виміру
         li
-            a(href='position.html').nav-link Позиціонування
+            a(href='position.html').nav-link
+                span Позиціонування
         li
-            a(href='fonts.html').nav-link Стилізація тексту
+            a(href='fonts.html').nav-link
+                span Стилізація тексту
         li
-            a(href='block_style.html').nav-link Стилізація елементів
+            a(href='block_style.html').nav-link
+                span Стилізація елементів
         li
-            a(href='media.html').nav-link @media
+            a(href='media.html').nav-link
+                span @media
         li
-            a(href='transform.html').nav-link Трансформація
+            a(href='transform.html').nav-link
+                span Трансформація
         li
-            a(href='animations.html').nav-link Анімація (2D, 3D)
+            a(href='animations.html').nav-link
+                span Анімація (2D, 3D)
         li
-            a(href='flexbox.html').nav-link Flex-box
+            a(href='flexbox.html').nav-link
+                span Flex-box
         li
-            a(href='#').nav-link Display
+            a(href='#').nav-link
+                span Display
         li
-            a(href='#').nav-link Префікси
+            a(href='#').nav-link
+                span Префікси
         li
-            a(href='#').nav-link SVG
+            a(href='#').nav-link
+                span SVG
         li
-            a(href='#').nav-link Спрайти
+            a(href='#').nav-link
+                span Спрайти
