--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -17,9 +17,6 @@
       overflow-y: auto;
     }
 
-    .nav-link {
-      visibility: visible;
-    }
   }
 }
 
@@ -51,16 +48,17 @@
 }
 
 .nav-list {
-  max-height: 90%;
   padding: 0 0 0 3rem;
   display: block;
-  overflow: hidden;
+  overflow-x: hidden;
   list-style: none;
   counter-reset: item-number;
 
   li {
+    display: flex;
     position: relative;
     height: 2.2rem;
+    line-height: 2.2rem;
 
     &::before {
       counter-increment: item-number;
@@ -78,19 +76,10 @@
       color: $white;
       transition: all 180ms ease;
     }
-  }
 
-  .nav-link {
-    position: relative;
-    display: block;
-    height: 100%;
-    line-height: 1rem;
-
-    font: {
-      size: 13px;
-      weight: 400;
-    };
-    transition: all 180ms ease;
+    &:first-child {
+      line-height: 1rem;
+    }
 
     &:hover {
       color: $black;
@@ -109,6 +98,14 @@
 
       }
     }
+  }
+
+  .nav-link {
+    font-size: 12px;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+
 
   }
 }
